2010-11-06  Robert Larice
 * src/frontend/inpcom.c :
    tiny rewrite, make use of copy_substring()

2010-11-06  Robert Larice
 * src/frontend/diff.c :
    tiny rewrite, make use of cieq()

2010-11-06  Robert Larice
 * src/frontend/parse.c ,
 * src/frontend/typesdef.c ,
 * src/frontend/vectors.c ,
 * src/frontend/numparam/spicenum.c ,
 * src/spicelib/parser/inpptree.c ,
 * src/xspice/evt/evtplot.c ,
 * src/xspice/ipc/ipc.c :
    tiny rewrite, make use of strtolower() and strtoupper()

2010-11-06  Robert Larice
 * src/frontend/parser/input.c :
    tiny rewrite, type fixes

2010-11-06  Robert Larice
 * src/frontend/inpcom.c :
    drop a redundant check

2010-11-06  Robert Larice
 * src/spicelib/parser/inp2dot.c ,
 * src/spicelib/parser/inppas3.c :
    tiny rewrite, don't invoke strlen() to check for strlen() == 1

2010-11-06  Robert Larice
 * src/xspice/idn/idndig.c :
    change a (int) cast application, to avoid type conversion warnings

2010-11-06  Robert Larice
 * src/frontend/help/readhelp.c :
    tiny rewrite, to avoid type conversion warnings

2010-11-06  Robert Larice
 * src/frontend/parser/lexical.c :
    minor rewrite, a local variable type change

2010-11-06  Robert Larice
 * src/frontend/evaluate.c :
    tiny rewrite to avoid "variable ... might be clobbered by 'longjmp'" warnings

2010-11-06  Robert Larice
 * src/frontend/plotting/agraf.c ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c ,
 * src/misc/dstring.c ,
 * src/spicelib/parser/inp2r.c ,
 * src/spicelib/parser/inpgmod.c :
    (int) cast the return value of some strlen() invocations

2010-11-06  Robert Larice
 * src/frontend/subckt.c ,
 * src/spicelib/parser/inppas2.c :
    minor rewrite, avoid type conversion warnings

2010-11-06  Robert Larice
 * src/spicelib/devices/bsim1/b1.c ,
 * src/spicelib/devices/bsim1/b1dset.c ,
 * src/spicelib/devices/bsim1/b1eval.c ,
 * src/spicelib/devices/bsim1/b1mpar.c ,
 * src/spicelib/devices/bsim1/bsim1def.h :