@@ -1,4 +1,8 @@
 2010-11-06  Robert Larice
+ * src/spicelib/devices/ndev/ndevdump.c :
+    drop some unused static variables
+
+2010-11-06  Robert Larice
  * src/frontend/inpcom.c :
     tiny rewrite, make use of copy_substring()
 
